--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 3rem;
+    margin-bottom: 5rem;
 }
 
 body {
@@ -28,45 +29,35 @@ html {
 }
 
 label {
-    font-size: 25px;
+    font-size: 1.3rem;
 }
 
 .menu {
     display: block;
-    font-size: 2rem;
+    font-size: 1.5rem;
     backdrop-filter: blur(5px) brightness(50%);
     padding: 2rem;
-    border-radius: 20px;
+    border-radius: 2rem;
 }
 
 select {
-    border-radius: 20px;
-    height: 2rem;
-    width: 5rem;
+    margin-left: 0.5rem;
+    border-radius: 2rem;
+    height: 1.5rem;
+    width: 4.5rem;
     text-align: center;
     text-align-last: center;
-    text-indent: 15px;
+    text-indent: 1rem;
     outline: none;
-}
-
-input {
-    margin-top: 45px;
-    border-radius: 20px;
-    text-align: center;
-    outline: none;
-    font-family: 'Roboto Mono', monospace;
-    height: 2rem;
-    width: 14rem;
-    border: none;
 }
 
 button {
-    margin-top: 45px;
+    margin-top: 2.5rem;
     text-align: center;
     height: 2.5rem;
     width: 9rem;
     font-size: 1rem;
-    border-radius: 20px;
+    border-radius: 2rem;
     color: white;
     font-family: 'Roboto Mono', monospace;
     background-color: rgba(46, 48, 49, 0.5);
@@ -75,7 +66,7 @@ button {
 }
 
 #LEselectDiv {
-    margin-top: 30px;
+    margin-top: 2.5rem;
 }
 
 #LEselect {
