--- a/style.css
+++ b/style.css
@@ -67,9 +67,42 @@ button {
 
 #LEselectDiv {
     margin-top: 2.5rem;
+    width: 400px;
 }
 
 #LEselect {
     height: 2rem;
     width: 12.5rem;
+}
+
+@media screen and (max-width: 418px) {
+    .menu {
+        padding: 5%;
+    }
+    label {
+        font-size: 1rem;
+    }
+    #LEselect {
+        height: 2rem;
+        width: 10rem;
+    }
+    #LEselectDiv {
+        width: 400px;
+    }
+}
+
+@media screen and (max-width: 344px) {
+    .menu {
+        padding: 0.5%;
+    }
+    label {
+        font-size: 0.5rem;
+    }
+    #LEselect {
+        height: 1rem;
+        width: 8rem;
+    }
+    #LEselectDiv {
+        width: 400px;
+    }
 }
