--- a/style.css
+++ b/style.css
@@ -128,9 +128,41 @@
     }
     
     .container {
-        border: 2px solid #ccc;
-        width: 300px;
         height: 100px;
         overflow-y: scroll;
         font-size: 1rem;
+    }
+    
+    .border {
+        margin-top: 2.5rem;
+        border: 2px solid rgb(80, 80, 80);
+        border-radius: 10px;
+        height: 100px;
+    }
+    
+    .container::-webkit-scrollbar-track {
+        border: 1px solid #000;
+        padding: 2px 0;
+        background-color: #707070;
+        border-radius: 7px;
+        height: 5px;
+    }
+    
+    .container::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+    .container::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+        background-color: #131212;
+        border: 1px solid rgb(44, 44, 44);
+    }
+    
+    .option {
+        margin: 0;
+        padding-bottom: 20px;
+        align-items: center;
+        display: grid;
+        grid-template-columns: auto 1fr;
     }
