--- a/style.css
+++ b/style.css
@@ -1,179 +1,161 @@
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap');
-    html,
-    body {
-        width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-        overflow-x: hidden;
-    }
-    
-    h1 {
-        font-size: 3rem;
-        margin-bottom: 5rem;
-    }
-    
-    body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        height: 100vh;
-        background-color: rgba(10, 23, 55, 0.5);
-        color: white;
-        height: 100vh;
-        font-family: 'Lobster', cursive;
-    }
-    
-    html {
-        background-image: url("https://source.unsplash.com/random");
-        background-size: cover;
-        background-position: center
-    }
-    
-    label {
-        font-size: 1.3rem;
-    }
-    
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,800&display=swap');
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
+h1 {
+    margin-top: 0;
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+    color: #EE3E42
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100vh;
+    color: #1C3E93;
+    height: 100vh;
+    font-family: 'Montserrat', sans-serif;
+}
+
+html {
+    background-image: linear-gradient(to bottom right, #306Bff, #1C3E93);
+    background-size: cover;
+    background-position: center
+}
+
+label {
+    font-size: 1.3rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.menu {
+    display: block;
+    font-size: 1.5rem;
+    background-color: #FFFFFF;
+    padding: 2rem;
+    border-radius: 2rem;
+}
+
+select {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 1.5rem;
+    height: 55px;
+    width: 400px;
+    text-align: center;
+    text-align-last: center;
+    text-indent: 1rem;
+    outline: none;
+    background-color: #e9e9e9;
+    color: #1C3E93;
+    border: none;
+}
+
+button {
+    margin-top: 1rem;
+    text-align: center;
+    height: 4rem;
+    width: 100%;
+    font-size: 2rem;
+    border-radius: 20px;
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #EE3E42;
+    outline: none;
+    box-shadow: none;
+    border: none;
+}
+
+@media screen and (max-width: 418px) {
     .menu {
-        display: block;
-        font-size: 1.5rem;
-        backdrop-filter: blur(5px) brightness(50%);
-        padding: 2rem;
-        border-radius: 2rem;
+        padding: 5%;
     }
-    
-    select {
-        margin-left: 0.5rem;
-        border-radius: 2rem;
-        height: 1.5rem;
-        width: 4.5rem;
-        text-align: center;
-        text-align-last: center;
-        text-indent: 1rem;
-        outline: none;
-    }
-    
-    button {
-        margin-top: 2.5rem;
-        text-align: center;
-        height: 2.5rem;
-        width: 9rem;
+    label {
         font-size: 1rem;
-        border-radius: 2rem;
-        color: white;
-        font-family: 'Roboto Mono', monospace;
-        background-color: rgba(46, 48, 49, 0.5);
-        outline: none;
-        box-shadow: none;
     }
-    
-    #LEselectDiv {
-        margin-top: 2.5rem;
-        width: 400px;
+}
+
+@media screen and (max-width: 344px) {
+    .menu {
+        padding: 0.5%;
     }
-    
-    #LEselect {
-        height: 2rem;
-        width: 12.5rem;
+    label {
+        font-size: 0.5rem;
     }
-    
-    @media screen and (max-width: 418px) {
-        .menu {
-            padding: 5%;
-        }
-        label {
-            font-size: 1rem;
-        }
-        #LEselect {
-            height: 2rem;
-            width: 10rem;
-        }
-        #LEselectDiv {
-            width: 400px;
-        }
-    }
-    
-    @media screen and (max-width: 344px) {
-        .menu {
-            padding: 0.5%;
-        }
-        label {
-            font-size: 0.5rem;
-        }
-        #LEselect {
-            height: 1rem;
-            width: 8rem;
-        }
-        #LEselectDiv {
-            width: 400px;
-        }
-    }
-    
-    #credit {
-        margin-top: 2.5rem;
-        font-size: 1.2rem;
-        font-family: 'Times New Roman', Times, serif;
-    }
-    
-    a {
-        text-decoration: none;
-        font-family: 'Times New Roman', Times, serif;
-        color: rgb(197, 132, 132);
-        margin-left: 0.2rem;
-    }
-    
-    a:hover {
-        color: rgb(245, 120, 120);
-    }
-    
-    .container {
-        height: 100px;
-        overflow-y: scroll;
-        font-size: 1rem;
-        text-align: left;
-    }
-    
-    .border {
-        margin-top: 0.5rem;
-        border: 2px solid rgb(80, 80, 80);
-        border-radius: 10px;
-        height: 100px;
-    }
-    
-    .container::-webkit-scrollbar-track {
-        border: 1px solid #000;
-        padding: 2px 0;
-        background-color: #707070;
-        border-radius: 7px;
-        height: 5px;
-    }
-    
-    .container::-webkit-scrollbar {
-        width: 10px;
-    }
-    
-    .container::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-        background-color: #131212;
-        border: 1px solid rgb(44, 44, 44);
-    }
-    
-    .option {
-        margin: 0;
-        margin-top: 5px;
-        padding-bottom: 20px;
-        align-items: center;
-        display: grid;
-        grid-template-columns: auto 1fr;
-    }
-    
-    input[type="checkbox" i] {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-    
-    #itinerarioLabel {
-        margin-top: 2.5rem;
-    }
+}
+
+#credit {
+    font-size: 1rem;
+    color: #1C3E93;
+}
+
+a {
+    color: #EE3E42;
+    margin-left: 0.2rem;
+}
+
+a:hover {
+    color: rgb(245, 120, 120);
+}
+
+.container {
+    height: 100px;
+    overflow-y: scroll;
+    font-size: 1rem;
+    text-align: left;
+    background-color: #e9e9e9;
+    border-radius: 20px;
+    width: 100%;
+    font-weight: bold;
+}
+
+.container::-webkit-scrollbar {
+    width: 10px;
+    height: 2px;
+    display: none;
+}
+
+.option {
+    margin: 0;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    align-items: center;
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+
+input[type="checkbox" i] {
+    margin-right: 10px;
+    margin-left: 15px;
+    height: 20px;
+    width: 20px;
+    font-family: 'Roboto', sans-serif;
+    background-color: #FFFFFF;
+}
+
+#itinerarioLabel {
+    margin-top: 0.9rem;
+    text-align: left;
+    font-size: 1.5rem;
+}
+
+.SelectsDiv {
+    display: grid;
+    text-align: left;
+    font-size: 1.5rem;
+}
+
+#classselect {
+    margin-bottom: 1.5rem;
+}
