--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
     margin-top: 0;
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-bottom: 0.5rem;
     color: #EE3E42
 }
@@ -34,13 +34,13 @@ html {
 }
 
 label {
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-family: 'Roboto', sans-serif;
 }
 
 .menu {
     display: block;
-    font-size: 1.5rem;
+    font-size: 1rem;
     background-color: #FFFFFF;
     padding: 2rem;
     border-radius: 2rem;
@@ -49,7 +49,7 @@ label {
 select {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 10px;
     border-radius: 1.5rem;
     height: 55px;
     width: 400px;
@@ -67,7 +67,7 @@ button {
     text-align: center;
     height: 4rem;
     width: 100%;
-    font-size: 2rem;
+    font-size: 1rem;
     border-radius: 20px;
     color: #FFFFFF;
     font-family: 'Montserrat', sans-serif;
@@ -78,37 +78,13 @@ button {
 }
 
 #credit {
-    font-size: 1rem;
+    font-size: 0.5rem;
     color: #1C3E93;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (min-width: 418px) {
     button {
-        font-size: 1.4rem;
-    }
-    h1 {
-        font-size: 1.8rem;
-    }
-    span {
-        font-size: 1.3rem;
-    }
-    select {
-        width: 350px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    button {
-        font-size: 1.2rem;
-    }
-    h1 {
-        font-size: 1.6rem;
-    }
-    span {
-        font-size: 1.2rem;
-    }
-    select {
-        width: 320px;
+        font-size: 1r;
     }
 }
 
@@ -124,7 +100,7 @@ a:hover {
 .container {
     height: 100px;
     overflow-y: scroll;
-    font-size: 1rem;
+    font-size: 0.5rem;
     text-align: left;
     background-color: #e9e9e9;
     border-radius: 20px;
@@ -159,13 +135,13 @@ input[type="checkbox" i] {
 #itinerarioLabel {
     margin-top: 0.9rem;
     text-align: left;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 .SelectsDiv {
     display: grid;
     text-align: left;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 #classselect {
