--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
     margin-top: 0;
-    font-size: 2rem;
+    font-size: 1.4rem;
     margin-bottom: 0.5rem;
     color: #EE3E42
 }
@@ -49,10 +49,10 @@ label {
 select {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: 10px;
+    font-size: 0.9rem;
     border-radius: 1.5rem;
     height: 55px;
-    width: 400px;
+    width: 22rem;
     text-align: center;
     text-align-last: center;
     text-indent: 1rem;
@@ -78,13 +78,23 @@ button {
 }
 
 #credit {
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     color: #1C3E93;
 }
 
-@media screen and (min-width: 418px) {
+@media screen and (min-width: 430px) {
     button {
         font-size: 1r;
+    }
+    select {
+        height: 50px;
+        width: 20rem;
+    }
+}
+
+@media screen and (min-height: 650px) {
+    menu {
+        padding-top: 15px;
     }
 }
 
