--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ button {
     outline: none;
     box-shadow: none;
     border: none;
+    transition: ease-in .3s;
+}
+
+button:hover {
+    background-color: #d62629;
 }
 
 #credit {
@@ -105,6 +110,8 @@ button {
 @media screen and (max-width: 380px) {
     button {
         font-size: 1rem;
+        margin-top: 12px;
+        height: 3.5rem;
     }
     select {
         height: 40px;
@@ -113,8 +120,8 @@ button {
     .menu {
         padding: 20px;
     }
-    #classselect {
-        margin-bottom: 15px;
+    .ClasSelec {
+        margin-bottom: 10px;
     }
     #itinerarioLabel {
         margin-top: 5px;
