--- a/style.css
+++ b/style.css
@@ -142,6 +142,10 @@ input[type="checkbox" i] {
     font-size: 1.3rem;
 }
 
+input[type="checkbox" i] {
+    cursor: pointer;
+}
+
 #classselect {
     margin-bottom: 1.5rem;
 }
