--- a/style.css
+++ b/style.css
@@ -161,6 +161,12 @@ input[type="checkbox" i] {
     html {
         background-image: none;
     }
+    #saleImg {
+        padding-bottom: 10px;
+    }
+    h1 {
+        margin-bottom: 30px;
+    }
 }
 
 @media screen and (max-width: 420px) {
